--- a/links/templates/links/main.html
+++ b/links/templates/links/main.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% load static %}{% block title %}Различные сервисы{% endblock %}{% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %}Различные сервисы{% endblock %}{% block content %}
 <div class="container">
     <div class="card-deck">
         <div class="card">
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <h5 class="card-title">Заявление для сим-карты</h5>
                 <p class="card-text">Сервис по формированию заявления на Корпоративную симкарту</p>
-                <a href="{% url 'simkarta' %}" class="btn btn-primary">Перейти</a>
+                <a href="{% url 'application_generation' %}" class="btn btn-primary">Перейти</a>
             </div>
         </div>
         <div class="card">
