--- a/simcards/templates/simcards/base.html
+++ b/simcards/templates/simcards/base.html
@@ -26,7 +26,7 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 text-white">Главная</a></li>
                 <li><a href="{% url 'upload_mailing' %}" class="nav-link px-2 text-secondary">Замена ссылок</a></li>
-                <li><a href="{% url 'simkarta' %}" class="nav-link px-2 text-secondary">Симкарта</a></li>
+                <li><a href="{% url 'application_generation' %}" class="nav-link px-2 text-secondary">Симкарта</a></li>
             </ul>
 
 
