--- a/links/templates/links/succes.html
+++ b/links/templates/links/succes.html
@@ -1,7 +1,8 @@
 {% extends 'links/base.html' %} {% load crispy_forms_tags %}{% block title %}Замена ссылок в рассылке{% endblock %} {% block content %} {% if filename %}
 <div class="alert alert-success" role="alert">
     <h3>Файл готов для скачивания</h3>
-    <a class="btn btn-primary" href="{% url 'download' filename %}" role="button">Скачать файл</a>
+    <a class="btn btn-primary" href="{% url 'download' filename %}" target="_blank" role="button">Скачать файл</a>
+    <a class="btn btn-primary" href="{% url 'upload_mailing' %}" role="button">Сгенерировать еще</a>
 </div>
 {% endif %} {% if message_log %}
 <div class="alert alert-success" role="alert">
