--- a/replace_links/templates/main.html
+++ b/replace_links/templates/main.html
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <h5 class="card-title">Заявление для сим-карты</h5>
                 <p class="card-text">Сервис по формированию заявления на Корпоративную симкарту</p>
-                <a href="{% url 'simkarta' %}" class="btn btn-primary">Перейти</a>
+                <a href="{% url 'application_generation' %}" class="btn btn-primary">Перейти</a>
             </div>
         </div>
         <div class="card">
